# gmail-threat-analyzer

./: .gitignore  README.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/fixtures/: baseline_scores_post_phase2.json  baseline_scores_pre_phase1.json
backend/fixtures/benign/: apple_receipt_vt_noise.json  comeet_teams_interview.json  github_notification.json  google_meet_invite.json  internal_it_notice.json  shipping_notification.json
backend/fixtures/contract/: addon_minimal_1_2.json
backend/fixtures/contract/addon/: addon_full_1_2.json  addon_reply_to_angle_1_2.json
backend/fixtures/phishing/: archive_invoice_lure.json  invoice_executable.json  reply_to_bec_wire.json
backend/fixtures/scoring/: baseline_scores.json
backend/fixtures/scoring/benign/: apple_receipt_auth_pass.json  auth_all_pass_newsletter.json  calendly_zoom_invite.json  hr_policy_reminder.json  marketing_social_links.json  minimal_billing.json  password_reset_esp.json  paypal_receipt_tracking.json  same_org_reply_to.json  stripe_receipt_tracking.json  transactional_receipt.json
backend/fixtures/scoring/phishing/: brand_spoof_free_mail.json  credential_ip_shortener.json  generic_security_verify_login.json  gift_card_urgency.json  otp_login_scam.json  paypal_mismatch_url.json
backend/scripts/: calibrate_fixtures.py  test_llm_connectivity.py
backend/src/app/: __init__.py  constants.py  env_bootstrap.py  limits.py  main.py  routes_score.py  schemas.py  score_errors.py  score_logging.py  security.py
backend/src/tests/: __init__.py  conftest.py  fixture_corpus.py  test_addon_contract.py  test_aggregate.py  test_brand_impersonation.py  test_content_tags.py  test_explanations.py  test_external_links.py  test_features_extract.py  test_features_parsers.py  test_generic_security_phish_fixture.py  test_health.py  test_legitimacy.py  test_legitimacy_phase2.py  test_llm_engine.py  test_llm_provider.py  test_phase3_phishing_fixtures.py  test_phishing_regressions.py  test_reputation_live.py  test_reputation_providers.py  test_schemas.py  test_score_api.py  test_scoring_engine.py  test_scoring_fixtures.py  test_security.py  test_sender_brand_match.py  test_signals_llm.py  test_url_login_path.py  test_url_sanitizer.py  test_verdict_boundaries.py  test_workflow_features.py  test_workflow_legitimacy.py
(+101 files in other folders)
