[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gmail-malicious-scorer-backend"
version = "0.1.0"
description = "FastAPI backend for the Gmail Malicious Email Scorer add-on"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Ridmi" }]
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
app = ["scoring/data/*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/tests"]
markers = [
  "integration: outbound live calls to Safe Browsing / VirusTotal (requires RUN_REPUTATION_LIVE=1 and API keys)",
  "phishing_targets: enforce phishing fixture target verdict bands (or ENFORCE_PHISHING_FIXTURES=1)",
]
